feat: add kangdi seafile
Signed-off-by: adamanteye <ada@adamanteye.cc>

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -14,6 +14,8 @@ sites:
     url: https://task.adamanteye.cc
   - name: GPG Static File Server
     url: https://gpg.adamanteye.cc
+  - name: Seafile
+    url: https://cloud.adamanteye.cc
 
 status-website:
   cname: status.adamanteye.cc
